--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "Giuseppe Burtini",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.4.1"
   }
